# sigclr

./: .flake8  .gitignore  README.md  pyproject.toml
sigclr/: check_dataset.py  confusion.py  dataset.py  encoder.py  get_data_index_class_mapping.py  metrics.py  plot_augmentations.py  plot_augmentations2.py  sigclr.py  train.py
