[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sigclr"
# ignore this, version is set at build time by poetry-dynamic-versioning
version = "0.0.0"
description = ""
authors = [
    "Nicholas Bruce <nicholas.bruce@nrc-cnrc.gc.ca>",
    "Belaid Moa <bmoa@uvic.ca>",
]
# the directory (or directories) containing the project source files
packages = [
    { include = "sigclr" },
]
classifiers = [
    "Typing :: Typed"
]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torchsig = {git = "http://github.com/nsbruce/torchsig.git", branch="feat/support-multiple-inputs"}
lightning = {extras = ["extra"], version = "^2.3.0"}
torch = "2.0.1"
numpy = "^2.0.0"
pytorch-lightning = "^2.3.0"

[tool.poetry.group.dev]
# optional dependencies only used for development and testing
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
mypy = "^1.10.0"
isort = "^5.13.2"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"

[tool.black]
target-version = ["py310"]
preview=true

[tool.isort]
profile="black"

