[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sigclr"
# ignore this, version is set at build time by poetry-dynamic-versioning
version = "0.0.0"
description = ""
authors = [
    "Nicholas Bruce <nicholas.bruce@nrc-cnrc.gc.ca>",
    "Belaid Moa <bmoa@uvic.ca>",
]
# the directory (or directories) containing the project source files
packages = [
    { include = "sigclr" },
]
classifiers = [
    "Typing :: Typed"
]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.11"
torchsig = {git = "http://github.com/TorchDSP/torchsig.git", tag="v0.5.0"}
torch = { file = "/cvmfs/soft.computecanada.ca/custom/python/wheelhouse/gentoo/avx2/torch-2.0.1+computecanada-cp311-cp311-linux_x86_64.whl" }
# torch = "2.3.0"
pytorch-lightning = "^2.3.3"
lightning = {extras = ["extra"], version = "^2.3.3"}
numpy = "<2"

[tool.poetry.group.dev]
# optional dependencies only used for development and testing
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
isort = "^5.13.2"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"

[tool.black]
target-version = ["py311"]
preview=true

[tool.isort]
profile="black"

